[project]
name = "lumos-code"
version = "0.1.0"
description = "Polyglot CPG-Stack für lokales Live-Coding & Agent-Guardrails"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"typer>=0.9.0",
"rich>=13.0.0",
"httpx>=0.25.0",
"mcp>=0.1.0", # Offizielles Model Context Protocol SDK
"pyyaml>=6.0.1", # Hinzugefügt für Option C (Config Parsing von lumos.yml)
]

[project.scripts]
lmc = "lmc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lmc"]
