[project]
name = "lumos-code"
version = "0.1.0"
description = "Polyglot CPG-Stack für lokales Live-Coding & Agent-Guardrails"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"typer>=0.9.0",
"rich>=13.0.0",
"httpx>=0.25.0",
"pyyaml>=6.0.1",
"tree-sitter>=0.25",
"tree-sitter-language-pack>=1.10",
"starlette>=0.27",
"uvicorn>=0.23",
]

[project.scripts]
lmc = "lmc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lmc"]
